# Matching-Agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  ISDuBA-API.md  Makefile  README.md  initdb.sql  install-MatchingAgent.bash  install_isduba_fetcher  pg_hba.conf  pyproject.toml  setup_dev_tools.sh
plugins/asset_source/isduba/: .gitignore  README.md  build_hook.py  pyproject.toml  pyproject_start.toml
plugins/asset_source/isduba/assets/: README.md  isduba-api.json
plugins/asset_source/isduba/tests/: examples.py  test_connector.py  test_converter.py  test_isduba.py
plugins/asset_source/netbox/: .gitignore  README.md  build_hook.py  pyproject.toml
plugins/asset_source/netbox/assets/: README.md
plugins/asset_source/netbox/assets/api_templates/property_templates/: property_macros.py.jinja
plugins/asset_source/netbox/src/matcher_netbox_plugin/: __init__.py  netbox.py
plugins/asset_source/netbox/tests/: test_netbox.py
plugins/preprocessing/default/: pyproject.toml
plugins/preprocessing/default/tests/: examples_preprocessing.py  test_default.py  test_normalizer.py
plugins/preprocessing/identity/: pyproject.toml
plugins/preprocessing/netbox/: pyproject.toml
src/dina/netbox_api/: pyproject.toml
src/dina/netbox_api/net_box_rest_api_client/: __init__.py
src/dina/netbox_api/net_box_rest_api_client/api/circuits/: circuits_circuit_group_assignments_bulk_destroy.py  circuits_circuit_group_assignments_bulk_partial_update.py  circuits_circuit_group_assignments_create.py  circuits_circuit_group_assignments_destroy.py  circuits_circuit_group_assignments_list.py  circuits_circuit_group_assignments_partial_update.py  circuits_circuit_group_assignments_update.py  circuits_circuit_groups_bulk_destroy.py  circuits_circuit_groups_create.py  circuits_circuit_groups_destroy.py  circuits_circuit_groups_partial_update.py  circuits_circuit_groups_retrieve.py  circuits_circuit_groups_update.py  circuits_circuit_terminations_bulk_destroy.py  circuits_circuit_terminations_bulk_partial_update.py  circuits_circuit_terminations_bulk_update.py  circuits_circuit_terminations_create.py  circuits_circuit_terminations_destroy.py  circuits_circuit_terminations_list.py  circuits_circuit_terminations_partial_update.py  circuits_circuit_terminations_paths_retrieve.py  circuits_circuit_terminations_update.py  circuits_circuit_types_bulk_destroy.py  circuits_circuit_types_bulk_update.py  circuits_circuit_types_create.py  circuits_circuit_types_destroy.py  circuits_circuit_types_list.py  circuits_circuit_types_partial_update.py  circuits_circuit_types_retrieve.py  circuits_circuit_types_update.py  circuits_circuits_bulk_destroy.py  circuits_circuits_create.py  circuits_circuits_destroy.py  circuits_circuits_list.py  circuits_circuits_partial_update.py  circuits_circuits_retrieve.py  circuits_circuits_update.py  circuits_provider_accounts_bulk_destroy.py  circuits_provider_accounts_bulk_partial_update.py  circuits_provider_accounts_bulk_update.py  (+37 more)
src/dina/netbox_api/net_box_rest_api_client/api/core/: core_background_queues_retrieve.py  core_background_queues_retrieve_2.py  core_background_tasks_delete_create.py  core_background_tasks_enqueue_create.py  core_background_tasks_requeue_create.py  core_background_tasks_retrieve.py  core_background_tasks_retrieve_2.py  core_background_tasks_stop_create.py  core_background_workers_retrieve.py  core_background_workers_retrieve_2.py  core_data_files_list.py  core_data_files_retrieve.py  core_data_sources_bulk_destroy.py  core_data_sources_bulk_partial_update.py  core_data_sources_create.py  core_data_sources_destroy.py  core_data_sources_partial_update.py  core_data_sources_retrieve.py  core_data_sources_sync_create.py  core_data_sources_update.py  core_jobs_list.py  core_jobs_retrieve.py  core_object_changes_retrieve.py
src/dina/netbox_api/net_box_rest_api_client/api/dcim/: dcim_cable_terminations_bulk_destroy.py  dcim_cable_terminations_bulk_update.py  dcim_cable_terminations_create.py  dcim_cable_terminations_destroy.py  dcim_cable_terminations_retrieve.py  dcim_cable_terminations_update.py  dcim_cables_bulk_destroy.py  dcim_cables_bulk_partial_update.py  dcim_cables_bulk_update.py  dcim_cables_create.py  dcim_cables_destroy.py  dcim_cables_partial_update.py  dcim_cables_retrieve.py  dcim_cables_update.py  dcim_console_port_templates_bulk_destroy.py  dcim_console_port_templates_create.py  dcim_console_port_templates_destroy.py  dcim_console_port_templates_list.py  dcim_console_port_templates_partial_update.py  dcim_console_port_templates_retrieve.py  dcim_console_port_templates_update.py  dcim_console_ports_bulk_destroy.py  dcim_console_ports_bulk_partial_update.py  dcim_console_ports_bulk_update.py  dcim_console_ports_create.py  dcim_console_ports_destroy.py  dcim_console_ports_partial_update.py  dcim_console_ports_retrieve.py  dcim_console_ports_trace_retrieve.py  dcim_console_ports_update.py  dcim_console_server_port_templates_bulk_destroy.py  dcim_console_server_port_templates_bulk_partial_update.py  (+288 more)
src/dina/netbox_api/net_box_rest_api_client/models/: __init__.py  aggregate_custom_fields.py  aggregate_family.py  aggregate_request.py  asn_custom_fields.py  asn_range_request.py  asn_request.py  asn_request_custom_fields.py  available_vlan.py  bookmark.py  bookmark_request.py  brief_cable.py  brief_circuit_group_assignment_serializer.py  brief_circuit_group_assignment_serializer_priority_value.py  brief_circuit_group_assignment_serializer_request.py  brief_cluster_group_request.py  brief_cluster_request.py  brief_contact_role.py  brief_data_file.py  brief_data_source.py  brief_data_source_request.py  brief_device.py  brief_device_role.py  brief_fhrp_group.py  brief_ike_policy.py  brief_ip_address.py  brief_ip_sec_profile.py  brief_job.py  brief_job_status.py  brief_job_status_label.py  brief_l2vpn.py  brief_l2vpn_request.py  brief_l2vpn_request_type.py  brief_l2vpn_type_label.py  brief_l2vpn_type_value.py  brief_mac_address.py  brief_manufacturer_request.py  brief_module.py  brief_module_type.py  brief_module_type_profile_request.py  (+1123 more)
(+3030 files in other folders)
