[project]
name = "dina.matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "hatchling>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
netbox_fetcher = ["dina.plugins.datasource.netbox_fetcher"]
sample-fetcher = [
    "dina-plugins-datasource-sample",
]

[project.scripts]
assetman = "dina.assetman.main:main"
csafman = "dina.csafman.main:main"
csaf_matcher = "dina.matcher.main:main"
csaf_matcher_cli = "dina.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dina"]

[tool.uv.workspace]
members = [
    "plugins/asset_source/netbox",
    "plugins/asset_source/sample",
]

[tool.uv.sources]
"dina.plugins.datasource.netbox_fetcher" = { workspace = true }
dina-plugins-datasource-sample = { workspace = true }


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
]
