[project]
name = "dina.matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "hatchling>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "openapi-python-client",
    "httpx",
    "python-dateutil",
]

[project.optional-dependencies]
datasource-netbox = ["dina.plugins.datasource.netbox_fetcher"]
datasource-sample = [
    "dina-plugins-datasource-sample",
]
preprocessor-identity = [
    "dina-plugins-preprocessing-identity",
]
preprocessor-netbox = [
    "dina-plugins-preprocessing-netbox",
]

[project.scripts]
assetsync = "dina.assetsync.main:main"
csafsync = "dina.csafsync.main:main"
csaf_matcher = "dina.matcher.main:main"
csaf_matcher_cli = "dina.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dina"]

[tool.uv.workspace]
members = [
    "plugins/asset_source/netbox",
    "plugins/asset_source/sample",
    "plugins/preprocessing/identity",
    "plugins/preprocessing/netbox",
]

[tool.uv.sources]
"dina.plugins.datasource.netbox_fetcher" = { workspace = true }
dina-plugins-datasource-sample = { workspace = true }
dina-plugins-preprocessing-identity = { workspace = true }
dina-plugins-preprocessing-netbox = { workspace = true }

[tool.ruff]
exclude = ["plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client"]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
]
