[project]
name = "dina.matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.12.13",
    "psycopg>=3.2.9",
    "colorlog>=6.9.0",
    "hatchling>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "openapi-python-client",
    "httpx",
    "python-dateutil",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "lazy-imports",
    "psycopg[binary]>=3.2.9",
    "polars>=0.20.30",
    "rapidfuzz>=3.9.7",
    "packaging>=24.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
datasource-netbox = ["dina.plugins.datasource.netbox_fetcher"]
datasource-isduba = ["dina.plugins.datasource.isduba_fetcher"]
datasource-sample = [
    "dina-plugins-datasource-sample",
]
preprocessor-identity = [
    "dina-plugins-preprocessing-identity",
]

[project.scripts]
assetsync = "dina.assetsync.main:main"
csafsync = "dina.csafsync.main:main"
csaf_matcher = "dina.matcher.main:main"
csaf_matcher_cli = "dina.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dina"]

[tool.uv.workspace]
members = [
    "plugins/asset_source/isduba",
    "plugins/asset_source/netbox",
    "plugins/asset_source/sample",
    "plugins/preprocessing/identity"
]

[tool.uv.sources]
"dina.plugins.datasource.netbox_fetcher" = { workspace = true }
"dina.plugins.datasource.isduba_fetcher" = { workspace = true }
dina-plugins-datasource-sample = { workspace = true }
dina-plugins-preprocessing-identity = { workspace = true }
dina-plugins-preprocessing-netbox = { workspace = true }

[tool.ruff]
exclude = ["plugins/asset_source/netbox/src/dina/plugins/datasource/netbox/api_client"]
respect-gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
