[project]
# The name must match `dina.plugins.datasource.<plugin_name>`
name = "dina.plugins.datasource.isduba_fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"

# All data source plugins depend on the base matcher package. Feel free to add any additional dependencies.
dependencies = [
    "dina.matcher",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dina"]

# A datasource plugin must specify the correct DataSource class as an entry-point.
[project.entry-points."dina.plugins.datasource"]
isduba_fetcher = "dina.plugins.datasource.isduba.isduba:IsdubaDataSource"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "build_hook.py"
dependencies = [
    "openapi-generator-cli>=7.14.0",
    "dina.matcher",
]

[tool.uv.sources]
"dina.matcher" = { workspace = true }
