[project]
name = "matcher_netbox_plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"
dependencies = [
    "matcher",
]

[project.scripts]
netbox = "netbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
matcher = { workspace = true }
