[project]
name = "dina.plugins.datasource.netbox_fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Giraud", email = "mark.giraud@iosb.fraunhofer.de" }
]
requires-python = ">=3.13"
dependencies = [
    "dina.matcher",
]

[tool.hatch.build.targets.sdist]
include= [
    "assets",
    "src",
    "build_hook.py",
    "README.md"
]
[tool.hatch.build.targets.wheel]
packages = ["src/dina"]
artifacts = ["src/dina/plugins/datasource/netbox/generated"]

# A datasource plugin must specify the correct DataSource class as an entry-point.
[project.entry-points."dina.plugins.datasource"]
netbox_fetcher = "dina.plugins.datasource.netbox.netbox:NetboxDataSource"

[project.scripts]
dina-netbox-init = "dina.plugins.datasource.netbox.api_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "build_hook.py"
dependencies = [
    "openapi-python-client",
    "dina.matcher",
]

[tool.uv.sources]
"dina.matcher" = { workspace = true }
