[tool.poetry]
name = "net-box-rest-api-client"
version = "4.3.1 (4.3)"
description = "A client library for accessing NetBox REST API"
authors = []
readme = "README.md"
packages = [
    {include = "net_box_rest_api_client"},
]
include = ["CHANGELOG.md", "net_box_rest_api_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
